# project-template

./: AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  TEMPLATE_GUIDE.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/promptkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/webapp/: README.md  __init__.py  main.py
templates/webapp/templates/: index.html  modes.html  research.html
tests/: test_cli_smoke.py  test_core_ascii.py
